oldexamples/examples/modelica+/parser/parser.output
Terminals which are not used

   AMPERSAND
   AS
   AXIOM
   BAR
   CCON
   COLONCOLON
   DASHES
   DATATYPE
   DEFAULT
   EQTYPE
   FAIL
   FATARROW
   LET
   MODULE
   OF
   RELATION
   RULE
   START_INTERFACE
   TYVAR
   VAL
   WILD
   WITH
   WITHTYPE
   NEG_INT
   MOD_INT
   ADD_REAL
   SUB_REAL
   NEG_REAL
   MUL_REAL
   DIV_REAL
   MOD_REAL
   POW_REAL
   EQ_REAL
   GE_REAL
   GT_REAL
   LE_REAL
   LT_REAL
   NE_REAL
   ADD_STRING
   ADD_LIST
   BOUNDARY
   CODE
   RESULTS
   UNIONTYPE
   MATCH
   CASE
   LOCAL
   START_MODELICA
   START_MODULE


State 77 conflicts: 1 shift/reduce
State 172 conflicts: 1 shift/reduce
State 174 conflicts: 1 shift/reduce
State 184 conflicts: 1 shift/reduce
State 186 conflicts: 1 shift/reduce
State 195 conflicts: 1 shift/reduce
State 230 conflicts: 1 shift/reduce
State 238 conflicts: 1 shift/reduce
State 260 conflicts: 1 shift/reduce
State 409 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: stored_definition

    2 ident: IDENT

    3 stored_definition: /* empty */
    4                  | within_clause class_definition_list EOF

    5 optENCAPSULATED: ENCAPSULATED
    6                | /* empty */

    7 optPARTIAL: PARTIAL
    8           | /* empty */

    9 optFINAL: FINAL
   10         | /* empty */

   11 optEACH: EACH
   12        | /* empty */

   13 within_clause: WITHIN name_path SEMICOLON
   14              | /* empty */

   15 class_definition_list: optFINAL class_definition SEMICOLON class_definition_list
   16                      | /* empty */

   17 class_definition: optENCAPSULATED optPARTIAL class_type ident class_specifier

   18 class_type: CLASS
   19           | MODEL
   20           | RECORD
   21           | BLOCK
   22           | CONNECTOR
   23           | TYPE
   24           | PACKAGE
   25           | FUNCTION

   26 base_prefix: flow_prefix variability_prefix direction_prefix

   27 class_specifier: string_comment composition END IDENT
   28                | EQ base_prefix name_path opt_array_subscripts class_modification comment
   29                | EQ enumeration
   30                | EQ overloading

   31 enumeration: ENUMERATION LPAREN enum_list RPAREN comment

   32 enum_list: enumeration_literal COMMA enum_list
   33          | enumeration_literal

   34 enumeration_literal: ident comment

   35 overloading: OVERLOAD LPAREN name_path_list RPAREN comment

   36 name_path_list: name_path COMMA name_path_list
   37               | name_path

   38 flow_prefix: FLOW
   39            | /* empty */

   40 variability_prefix: DISCRETE
   41                   | PARAMETER
   42                   | CONSTANT
   43                   | /* empty */

   44 direction_prefix: INPUT
   45                 | OUTPUT
   46                 | /* empty */

   47 component_clause: flow_prefix variability_prefix direction_prefix type_specifier array_subscripts component_list

   48 component_clause1: flow_prefix variability_prefix direction_prefix type_specifier component_declaration

   49 import_clause: IMPORT explicit_import_name comment
   50              | IMPORT implicit_import_name comment

   51 explicit_import_name: ident EQ name_path

   52 implicit_import_name: name_path DOTSTAR
   53                     | name_path

   54 composition: element_list composition_sublist

   55 composition_sublist: PUBLIC element_list composition_sublist
   56                    | PROTECTED element_list composition_sublist
   57                    | equation_clause composition_sublist
   58                    | initial_equation_clause composition_sublist
   59                    | algorithm_clause composition_sublist
   60                    | initial_algorithm_clause composition_sublist
   61                    | opt_external_clause

   62 opt_annotation_semicolon: annotation SEMICOLON
   63                         | /* empty */

   64 opt_external_clause: EXTERNAL external_function_call opt_annotation_semicolon opt_annotation_semicolon
   65                    | /* empty */

   66 language_specification: SCON

   67 opt_language_specification: language_specification
   68                           | /* empty */

   69 opt_component_reference: component_reference
   70                        | /* empty */

   71 external_function_call: opt_language_specification opt_component_reference EQ ident LPAREN opt_expression_list RPAREN
   72                       | opt_language_specification ident LPAREN opt_expression_list RPAREN

   73 opt_expression_list: expression_list
   74                    | /* empty */

   75 element_list: element SEMICOLON element_list
   76             | annotation SEMICOLON element_list
   77             | /* empty */

   78 element: import_clause
   79        | extends_clause
   80        | optFINAL inner_outer REPLACEABLE class_definition opt_constraining_clause comment
   81        | optFINAL inner_outer class_definition
   82        | optFINAL inner_outer REPLACEABLE component_clause opt_constraining_clause comment
   83        | optFINAL inner_outer component_clause

   84 inner_outer: INNER
   85            | OUTER
   86            | INNER OUTER
   87            | /* empty */

   88 subscript: expression
   89          | COLON

   90 subscript_list: subscript COMMA subscript_list
   91               | subscript

   92 array_subscripts: LBRACK subscript_list RBRACK

   93 opt_array_subscripts: array_subscripts
   94                     | /* empty */

   95 type_specifier: name_path

   96 component_list: component_declaration COMMA component_list
   97               | component_declaration

   98 component_declaration: declaration comment

   99 declaration: ident array_subscripts opt_modification

  100 modification: class_modification EQ expression
  101             | class_modification
  102             | EQ expression
  103             | ASSIGN expression

  104 opt_modification: modification
  105                 | /* empty */

  106 class_modification: LPAREN argument_list RPAREN
  107                   | LPAREN RPAREN

  108 argument_list: argument COMMA argument_list
  109              | argument

  110 argument: optEACH optFINAL component_reference opt_modification string_comment
  111         | REDECLARE optEACH optFINAL REPLACEABLE class_definition opt_constraining_clause
  112         | REDECLARE optEACH optFINAL REPLACEABLE component_clause1 opt_constraining_clause
  113         | REDECLARE optEACH optFINAL class_definition
  114         | REDECLARE optEACH optFINAL component_clause1

  115 initial_equation_clause: INITIAL EQUATION equation_annotation_list

  116 equation_clause: EQUATION equation_annotation_list

  117 equation_annotation_list: equation SEMICOLON equation_annotation_list
  118                         | annotation SEMICOLON equation_annotation_list
  119                         | /* empty */

  120 constraining_clause: extends_clause

  121 opt_constraining_clause: constraining_clause
  122                        | /* empty */

  123 extends_clause: EXTENDS name_path class_modification

  124 algorithm_clause: ALGORITHM algorithm_annotation_list

  125 initial_algorithm_clause: INITIAL ALGORITHM algorithm_annotation_list

  126 algorithm_annotation_list: algorithm SEMICOLON algorithm_annotation_list
  127                          | annotation SEMICOLON algorithm_annotation_list
  128                          | /* empty */

  129 equation: simple_expression EQ expression comment
  130         | conditional_equation_e comment
  131         | for_clause_e comment
  132         | connect_clause comment
  133         | when_clause_e comment
  134         | ident function_call comment

  135 algorithm: component_reference ASSIGN expression comment
  136          | LPAREN expression_list RPAREN ASSIGN component_reference function_call comment
  137          | conditional_equation_a comment
  138          | for_clause_a comment
  139          | while_clause comment
  140          | when_clause_a comment

  141 equation_elseif: ELSEIF expression THEN equation_list equation_elseif
  142                | /* empty */

  143 algorithm_elseif: ELSEIF expression THEN algorithm_list algorithm_elseif
  144                 | /* empty */

  145 opt_equation_else: ELSE equation_list
  146                  | /* empty */

  147 opt_algorithm_else: ELSE algorithm_list
  148                   | /* empty */

  149 conditional_equation_e: IF expression THEN equation_list equation_elseif opt_equation_else END IF

  150 conditional_equation_a: IF expression THEN algorithm_list algorithm_elseif opt_algorithm_else END IF

  151 for_indices: for_indice COMMA for_indices
  152            | for_indice

  153 for_indice: ident
  154           | ident IN expression

  155 for_clause_e: FOR for_indices LOOP equation_list END FOR

  156 for_clause_a: FOR for_indices LOOP algorithm_list END FOR

  157 while_clause: WHILE expression LOOP algorithm_list END WHILE

  158 when_clause_e: WHEN expression THEN equation_list else_when_e END WHEN

  159 else_when_e: ELSEWHEN expression THEN equation_list else_when_e
  160            | /* empty */

  161 when_clause_a: WHEN expression THEN algorithm_list else_when_a END WHEN

  162 else_when_a: ELSEWHEN expression THEN algorithm_list else_when_a
  163            | /* empty */

  164 equation_list: equation SEMICOLON equation_list
  165              | /* empty */

  166 algorithm_list: algorithm SEMICOLON algorithm_list
  167               | /* empty */

  168 connect_clause: CONNECT LPAREN component_reference COMMA component_reference RPAREN

  169 expression: if_expression
  170           | simple_expression

  171 if_expression: IF expression THEN expression elseif_expression_list ELSE expression

  172 elseif_expression_list: ELSEIF expression THEN expression elseif_expression_list
  173                       | /* empty */

  174 simple_expression: logical_expression COLON logical_expression COLON logical_expression
  175                  | logical_expression COLON logical_expression
  176                  | logical_expression

  177 logical_expression: logical_term OR logical_expression
  178                   | logical_term

  179 logical_term: logical_factor AND logical_term
  180             | logical_factor

  181 logical_factor: NOT relation
  182               | relation

  183 relation: arithmetic_expression rel_op arithmetic_expression

  184 rel_op: LT_INT
  185       | LE_INT
  186       | GT_INT
  187       | GE_INT
  188       | EQEQ_INT
  189       | NE_INT

  190 arithmetic_expression: unary_arithmetic_expression
  191                      | unary_arithmetic_expression ADD_INT arithmetic_expression
  192                      | unary_arithmetic_expression SUB_INT arithmetic_expression

  193 unary_arithmetic_expression: ADD_INT term
  194                            | SUB_INT term
  195                            | term

  196 term: factor STAR term
  197     | factor DIV_INT term
  198     | factor

  199 factor: primary POWER primary
  200       | primary

  201 expression_matrix_list: expression_list SEMICOLON expression_matrix_list
  202                       | expression_list

  203 expression_matrix: expression_matrix_list

  204 primary: ICON
  205        | RCON
  206        | SCON
  207        | FALSE
  208        | TRUE
  209        | component_ref_function_call
  210        | LPAREN expression_list RPAREN
  211        | LBRACK expression_matrix RBRACK
  212        | LBRACE expression_list RBRACE
  213        | LBRACE function_arguments RBRACE

  214 component_ref_function_call: component_reference function_call
  215                            | component_reference
  216                            | INITIAL LPAREN RPAREN

  217 name_path: IDENT DOT name_path
  218          | IDENT

  219 component_reference: ident array_subscripts DOT component_reference
  220                    | ident array_subscripts

  221 function_call: LPAREN function_arguments RPAREN

  222 function_arguments: expression_list FOR for_indices
  223                   | expression_list named_arguments

  224 named_arguments: named_argument named_arguments
  225                | /* empty */

  226 named_argument: ident EQ expression

  227 expression_list: expression COMMA expression_list
  228                | expression

  229 comment: string_comment opt_annotation
  230        | /* empty */

  231 string_comment: SCON
  232               | SCON string_comment_add

  233 string_comment_add: ADD_INT string_comment

  234 annotation: ANNOTATION class_modification

  235 opt_annotation: annotation
  236               | /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
EOF (258) 4
AMPERSAND (259)
AND (260) 179
AS (261)
AXIOM (262)
BAR (263)
CCON (264)
COLON (265) 89 174 175
COLONCOLON (266)
COMMA (267) 32 36 90 96 108 151 168 227
DASHES (268)
DATATYPE (269)
DEFAULT (270)
DOT (271) 217 219
END (272) 27 149 150 155 156 157 158 161
EQ (273) 28 29 30 51 71 100 102 129 226
EQTYPE (274)
FAIL (275)
FATARROW (276)
ICON (277) 204
IDENT (278) 2 27 217 218
LBRACK (279) 92 211
LET (280)
LPAREN (281) 31 35 71 72 106 107 136 168 210 216 221
MODULE (282)
NOT (283) 181
OF (284)
RCON (285) 205
RELATION (286)
RBRACK (287) 92 211
RPAREN (288) 31 35 71 72 106 107 136 168 210 216 221
RULE (289)
SCON (290) 66 206 231 232
STAR (291) 196
START_INTERFACE (292)
TYPE (293) 23
TYVAR (294)
VAL (295)
WILD (296)
WITH (297)
WITHTYPE (298)
ADD_INT (299) 191 193 233
SUB_INT (300) 192 194
NEG_INT (301)
DIV_INT (302) 197
MOD_INT (303)
EQEQ_INT (304) 188
GE_INT (305) 187
GT_INT (306) 186
LE_INT (307) 185
LT_INT (308) 184
NE_INT (309) 189
ADD_REAL (310)
SUB_REAL (311)
NEG_REAL (312)
MUL_REAL (313)
DIV_REAL (314)
MOD_REAL (315)
POW_REAL (316)
EQ_REAL (317)
GE_REAL (318)
GT_REAL (319)
LE_REAL (320)
LT_REAL (321)
NE_REAL (322)
ADD_STRING (323)
ADD_LIST (324)
SEMICOLON (325) 13 15 62 75 76 117 118 126 127 164 166 201
LBRACE (326) 212 213
RBRACE (327) 212 213
POWER (328) 199
ASSIGN (329) 103 135 136
ALGORITHM (330) 124 125
ANNOTATION (331) 234
BLOCK (332) 21
BOUNDARY (333)
CODE (334)
CLASS (335) 18
CONNECT (336) 168
CONNECTOR (337) 22
CONSTANT (338) 42
DISCRETE (339) 40
EACH (340) 11
ELSE (341) 145 147 171
ELSEIF (342) 141 143 172
ELSEWHEN (343) 159 162
ENUMERATION (344) 31
EQUATION (345) 115 116
ENCAPSULATED (346) 5
EXTENDS (347) 123
EXTERNAL (348) 64
FALSE (349) 207
TRUE (350) 208
FINAL (351) 9
FLOW (352) 38
FOR (353) 155 156 222
FUNCTION (354) 25
IF (355) 149 150 171
IMPORT (356) 49 50
IN (357) 154
INITIAL (358) 115 125 216
INNER (359) 84 86
INPUT (360) 44
LOOP (361) 155 156 157
MODEL (362) 19
OUTER (363) 85 86
OVERLOAD (364) 35
OR (365) 177
OUTPUT (366) 45
PACKAGE (367) 24
PARAMETER (368) 41
PARTIAL (369) 7
PROTECTED (370) 56
PUBLIC (371) 55
RECORD (372) 20
REDECLARE (373) 111 112 113 114
REPLACEABLE (374) 80 82 111 112
RESULTS (375)
THEN (376) 141 143 149 150 158 159 161 162 171 172
WHEN (377) 158 161
WHILE (378) 157
WITHIN (379) 13
UNIONTYPE (380)
MATCH (381)
CASE (382)
LOCAL (383)
DOTSTAR (384) 52
START_MODELICA (385)
START_MODULE (386)


Nonterminals, with rules where they appear

$accept (132)
    on left: 0
start (133)
    on left: 1, on right: 0
ident (134)
    on left: 2, on right: 17 34 51 71 72 99 134 153 154 219 220 226
stored_definition (135)
    on left: 3 4, on right: 1
optENCAPSULATED (136)
    on left: 5 6, on right: 17
optPARTIAL (137)
    on left: 7 8, on right: 17
optFINAL (138)
    on left: 9 10, on right: 15 80 81 82 83 110 111 112 113 114
optEACH (139)
    on left: 11 12, on right: 110 111 112 113 114
within_clause (140)
    on left: 13 14, on right: 4
class_definition_list (141)
    on left: 15 16, on right: 4 15
class_definition (142)
    on left: 17, on right: 15 80 81 111 113
class_type (143)
    on left: 18 19 20 21 22 23 24 25, on right: 17
base_prefix (144)
    on left: 26, on right: 28
class_specifier (145)
    on left: 27 28 29 30, on right: 17
enumeration (146)
    on left: 31, on right: 29
enum_list (147)
    on left: 32 33, on right: 31 32
enumeration_literal (148)
    on left: 34, on right: 32 33
overloading (149)
    on left: 35, on right: 30
name_path_list (150)
    on left: 36 37, on right: 35 36
flow_prefix (151)
    on left: 38 39, on right: 26 47 48
variability_prefix (152)
    on left: 40 41 42 43, on right: 26 47 48
direction_prefix (153)
    on left: 44 45 46, on right: 26 47 48
component_clause (154)
    on left: 47, on right: 82 83
component_clause1 (155)
    on left: 48, on right: 112 114
import_clause (156)
    on left: 49 50, on right: 78
explicit_import_name (157)
    on left: 51, on right: 49
implicit_import_name (158)
    on left: 52 53, on right: 50
composition (159)
    on left: 54, on right: 27
composition_sublist (160)
    on left: 55 56 57 58 59 60 61, on right: 54 55 56 57 58 59 60
opt_annotation_semicolon (161)
    on left: 62 63, on right: 64
opt_external_clause (162)
    on left: 64 65, on right: 61
language_specification (163)
    on left: 66, on right: 67
opt_language_specification (164)
    on left: 67 68, on right: 71 72
opt_component_reference (165)
    on left: 69 70, on right: 71
external_function_call (166)
    on left: 71 72, on right: 64
opt_expression_list (167)
    on left: 73 74, on right: 71 72
element_list (168)
    on left: 75 76 77, on right: 54 55 56 75 76
element (169)
    on left: 78 79 80 81 82 83, on right: 75
inner_outer (170)
    on left: 84 85 86 87, on right: 80 81 82 83
subscript (171)
    on left: 88 89, on right: 90 91
subscript_list (172)
    on left: 90 91, on right: 90 92
array_subscripts (173)
    on left: 92, on right: 47 93 99 219 220
opt_array_subscripts (174)
    on left: 93 94, on right: 28
type_specifier (175)
    on left: 95, on right: 47 48
component_list (176)
    on left: 96 97, on right: 47 96
component_declaration (177)
    on left: 98, on right: 48 96 97
declaration (178)
    on left: 99, on right: 98
modification (179)
    on left: 100 101 102 103, on right: 104
opt_modification (180)
    on left: 104 105, on right: 99 110
class_modification (181)
    on left: 106 107, on right: 28 100 101 123 234
argument_list (182)
    on left: 108 109, on right: 106 108
argument (183)
    on left: 110 111 112 113 114, on right: 108 109
initial_equation_clause (184)
    on left: 115, on right: 58
equation_clause (185)
    on left: 116, on right: 57
equation_annotation_list (186)
    on left: 117 118 119, on right: 115 116 117 118
constraining_clause (187)
    on left: 120, on right: 121
opt_constraining_clause (188)
    on left: 121 122, on right: 80 82 111 112
extends_clause (189)
    on left: 123, on right: 79 120
algorithm_clause (190)
    on left: 124, on right: 59
initial_algorithm_clause (191)
    on left: 125, on right: 60
algorithm_annotation_list (192)
    on left: 126 127 128, on right: 124 125 126 127
equation (193)
    on left: 129 130 131 132 133 134, on right: 117 164
algorithm (194)
    on left: 135 136 137 138 139 140, on right: 126 166
equation_elseif (195)
    on left: 141 142, on right: 141 149
algorithm_elseif (196)
    on left: 143 144, on right: 143 150
opt_equation_else (197)
    on left: 145 146, on right: 149
opt_algorithm_else (198)
    on left: 147 148, on right: 150
conditional_equation_e (199)
    on left: 149, on right: 130
conditional_equation_a (200)
    on left: 150, on right: 137
for_indices (201)
    on left: 151 152, on right: 151 155 156 222
for_indice (202)
    on left: 153 154, on right: 151 152
for_clause_e (203)
    on left: 155, on right: 131
for_clause_a (204)
    on left: 156, on right: 138
while_clause (205)
    on left: 157, on right: 139
when_clause_e (206)
    on left: 158, on right: 133
else_when_e (207)
    on left: 159 160, on right: 158 159
when_clause_a (208)
    on left: 161, on right: 140
else_when_a (209)
    on left: 162 163, on right: 161 162
equation_list (210)
    on left: 164 165, on right: 141 145 149 155 158 159 164
algorithm_list (211)
    on left: 166 167, on right: 143 147 150 156 157 161 162 166
connect_clause (212)
    on left: 168, on right: 132
expression (213)
    on left: 169 170, on right: 88 100 102 103 129 135 141 143 149
    150 154 157 158 159 161 162 171 172 226 227 228
if_expression (214)
    on left: 171, on right: 169
elseif_expression_list (215)
    on left: 172 173, on right: 171 172
simple_expression (216)
    on left: 174 175 176, on right: 129 170
logical_expression (217)
    on left: 177 178, on right: 174 175 176 177
logical_term (218)
    on left: 179 180, on right: 177 178 179
logical_factor (219)
    on left: 181 182, on right: 179 180
relation (220)
    on left: 183, on right: 181 182
rel_op (221)
    on left: 184 185 186 187 188 189, on right: 183
arithmetic_expression (222)
    on left: 190 191 192, on right: 183 191 192
unary_arithmetic_expression (223)
    on left: 193 194 195, on right: 190 191 192
term (224)
    on left: 196 197 198, on right: 193 194 195 196 197
factor (225)
    on left: 199 200, on right: 196 197 198
expression_matrix_list (226)
    on left: 201 202, on right: 201 203
expression_matrix (227)
    on left: 203, on right: 211
primary (228)
    on left: 204 205 206 207 208 209 210 211 212 213,
    on right: 199 200
component_ref_function_call (229)
    on left: 214 215 216, on right: 209
name_path (230)
    on left: 217 218, on right: 13 28 36 37 51 52 53 95 123 217
component_reference (231)
    on left: 219 220, on right: 69 110 135 136 168 214 215 219
function_call (232)
    on left: 221, on right: 134 136 214
function_arguments (233)
    on left: 222 223, on right: 213 221
named_arguments (234)
    on left: 224 225, on right: 223 224
named_argument (235)
    on left: 226, on right: 224
expression_list (236)
    on left: 227 228, on right: 73 136 201 202 210 212 222 223 227
comment (237)
    on left: 229 230, on right: 28 31 34 35 49 50 80 82 98 129 130
    131 132 133 134 135 136 137 138 139 140
string_comment (238)
    on left: 231 232, on right: 27 110 229 233
string_comment_add (239)
    on left: 233, on right: 232
annotation (240)
    on left: 234, on right: 62 76 118 127 235
opt_annotation (241)
    on left: 235 236, on right: 229


state 0

    0 $accept: . start $end

    WITHIN  shift, and go to state 1

    $end      reduce using rule 3 (stored_definition)
    $default  reduce using rule 14 (within_clause)

    start              go to state 2
    stored_definition  go to state 3
    within_clause      go to state 4


state 1

   13 within_clause: WITHIN . name_path SEMICOLON

    IDENT  shift, and go to state 5

    name_path  go to state 6


state 2

    0 $accept: start . $end

    $end  shift, and go to state 7


state 3

    1 start: stored_definition .

    $default  reduce using rule 1 (start)


state 4

    4 stored_definition: within_clause . class_definition_list EOF

    FINAL  shift, and go to state 8

    EOF       reduce using rule 16 (class_definition_list)
    $default  reduce using rule 10 (optFINAL)

    optFINAL               go to state 9
    class_definition_list  go to state 10


state 5

  217 name_path: IDENT . DOT name_path
  218          | IDENT .

    DOT  shift, and go to state 11

    $default  reduce using rule 218 (name_path)


state 6

   13 within_clause: WITHIN name_path . SEMICOLON

    SEMICOLON  shift, and go to state 12


state 7

    0 $accept: start $end .

    $default  accept


state 8

    9 optFINAL: FINAL .

    $default  reduce using rule 9 (optFINAL)


state 9

   15 class_definition_list: optFINAL . class_definition SEMICOLON class_definition_list

    ENCAPSULATED  shift, and go to state 13

    $default  reduce using rule 6 (optENCAPSULATED)

    optENCAPSULATED   go to state 14
    class_definition  go to state 15


state 10

    4 stored_definition: within_clause class_definition_list . EOF

    EOF  shift, and go to state 16


state 11

  217 name_path: IDENT DOT . name_path

    IDENT  shift, and go to state 5

    name_path  go to state 17


state 12

   13 within_clause: WITHIN name_path SEMICOLON .

    $default  reduce using rule 13 (within_clause)


state 13

    5 optENCAPSULATED: ENCAPSULATED .

    $default  reduce using rule 5 (optENCAPSULATED)


state 14

   17 class_definition: optENCAPSULATED . optPARTIAL class_type ident class_specifier

    PARTIAL  shift, and go to state 18

    $default  reduce using rule 8 (optPARTIAL)

    optPARTIAL  go to state 19


state 15

   15 class_definition_list: optFINAL class_definition . SEMICOLON class_definition_list

    SEMICOLON  shift, and go to state 20


state 16

    4 stored_definition: within_clause class_definition_list EOF .

    $default  reduce using rule 4 (stored_definition)


state 17

  217 name_path: IDENT DOT name_path .

    $default  reduce using rule 217 (name_path)


state 18

    7 optPARTIAL: PARTIAL .

    $default  reduce using rule 7 (optPARTIAL)


state 19

   17 class_definition: optENCAPSULATED optPARTIAL . class_type ident class_specifier

    TYPE       shift, and go to state 21
    BLOCK      shift, and go to state 22
    CLASS      shift, and go to state 23
    CONNECTOR  shift, and go to state 24
    FUNCTION   shift, and go to state 25
    MODEL      shift, and go to state 26
    PACKAGE    shift, and go to state 27
    RECORD     shift, and go to state 28

    class_type  go to state 29


state 20

   15 class_definition_list: optFINAL class_definition SEMICOLON . class_definition_list

    FINAL  shift, and go to state 8

    EOF       reduce using rule 16 (class_definition_list)
    $default  reduce using rule 10 (optFINAL)

    optFINAL               go to state 9
    class_definition_list  go to state 30


state 21

   23 class_type: TYPE .

    $default  reduce using rule 23 (class_type)


state 22

   21 class_type: BLOCK .

    $default  reduce using rule 21 (class_type)


state 23

   18 class_type: CLASS .

    $default  reduce using rule 18 (class_type)


state 24

   22 class_type: CONNECTOR .

    $default  reduce using rule 22 (class_type)


state 25

   25 class_type: FUNCTION .

    $default  reduce using rule 25 (class_type)


state 26

   19 class_type: MODEL .

    $default  reduce using rule 19 (class_type)


state 27

   24 class_type: PACKAGE .

    $default  reduce using rule 24 (class_type)


state 28

   20 class_type: RECORD .

    $default  reduce using rule 20 (class_type)


state 29

   17 class_definition: optENCAPSULATED optPARTIAL class_type . ident class_specifier

    IDENT  shift, and go to state 31

    ident  go to state 32


state 30

   15 class_definition_list: optFINAL class_definition SEMICOLON class_definition_list .

    $default  reduce using rule 15 (class_definition_list)


state 31

    2 ident: IDENT .

    $default  reduce using rule 2 (ident)


state 32

   17 class_definition: optENCAPSULATED optPARTIAL class_type ident . class_specifier

    EQ    shift, and go to state 33
    SCON  shift, and go to state 34

    class_specifier  go to state 35
    string_comment   go to state 36


state 33

   28 class_specifier: EQ . base_prefix name_path opt_array_subscripts class_modification comment
   29                | EQ . enumeration
   30                | EQ . overloading

    ENUMERATION  shift, and go to state 37
    FLOW         shift, and go to state 38
    OVERLOAD     shift, and go to state 39

    $default  reduce using rule 39 (flow_prefix)

    base_prefix  go to state 40
    enumeration  go to state 41
    overloading  go to state 42
    flow_prefix  go to state 43


state 34

  231 string_comment: SCON .
  232               | SCON . string_comment_add

    ADD_INT  shift, and go to state 44

    $default  reduce using rule 231 (string_comment)

    string_comment_add  go to state 45


state 35

   17 class_definition: optENCAPSULATED optPARTIAL class_type ident class_specifier .

    $default  reduce using rule 17 (class_definition)


state 36

   27 class_specifier: string_comment . composition END IDENT

    ANNOTATION  shift, and go to state 46
    EXTENDS     shift, and go to state 47
    FINAL       shift, and go to state 8
    IMPORT      shift, and go to state 48

    END        reduce using rule 77 (element_list)
    ALGORITHM  reduce using rule 77 (element_list)
    EQUATION   reduce using rule 77 (element_list)
    EXTERNAL   reduce using rule 77 (element_list)
    INITIAL    reduce using rule 77 (element_list)
    PROTECTED  reduce using rule 77 (element_list)
    PUBLIC     reduce using rule 77 (element_list)
    $default   reduce using rule 10 (optFINAL)

    optFINAL        go to state 49
    import_clause   go to state 50
    composition     go to state 51
    element_list    go to state 52
    element         go to state 53
    extends_clause  go to state 54
    annotation      go to state 55


state 37

   31 enumeration: ENUMERATION . LPAREN enum_list RPAREN comment

    LPAREN  shift, and go to state 56


state 38

   38 flow_prefix: FLOW .

    $default  reduce using rule 38 (flow_prefix)


state 39

   35 overloading: OVERLOAD . LPAREN name_path_list RPAREN comment

    LPAREN  shift, and go to state 57


state 40

   28 class_specifier: EQ base_prefix . name_path opt_array_subscripts class_modification comment

    IDENT  shift, and go to state 5

    name_path  go to state 58


state 41

   29 class_specifier: EQ enumeration .

    $default  reduce using rule 29 (class_specifier)


state 42

   30 class_specifier: EQ overloading .

    $default  reduce using rule 30 (class_specifier)


state 43

   26 base_prefix: flow_prefix . variability_prefix direction_prefix

    CONSTANT   shift, and go to state 59
    DISCRETE   shift, and go to state 60
    PARAMETER  shift, and go to state 61

    $default  reduce using rule 43 (variability_prefix)

    variability_prefix  go to state 62


state 44

  233 string_comment_add: ADD_INT . string_comment

    SCON  shift, and go to state 34

    string_comment  go to state 63


state 45

  232 string_comment: SCON string_comment_add .

    $default  reduce using rule 232 (string_comment)


state 46

  234 annotation: ANNOTATION . class_modification

    LPAREN  shift, and go to state 64

    class_modification  go to state 65


state 47

  123 extends_clause: EXTENDS . name_path class_modification

    IDENT  shift, and go to state 5

    name_path  go to state 66


state 48

   49 import_clause: IMPORT . explicit_import_name comment
   50              | IMPORT . implicit_import_name comment

    IDENT  shift, and go to state 67

    ident                 go to state 68
    explicit_import_name  go to state 69
    implicit_import_name  go to state 70
    name_path             go to state 71


state 49

   80 element: optFINAL . inner_outer REPLACEABLE class_definition opt_constraining_clause comment
   81        | optFINAL . inner_outer class_definition
   82        | optFINAL . inner_outer REPLACEABLE component_clause opt_constraining_clause comment
   83        | optFINAL . inner_outer component_clause

    INNER  shift, and go to state 72
    OUTER  shift, and go to state 73

    $default  reduce using rule 87 (inner_outer)

    inner_outer  go to state 74


state 50

   78 element: import_clause .

    $default  reduce using rule 78 (element)


state 51

   27 class_specifier: string_comment composition . END IDENT

    END  shift, and go to state 75


state 52

   54 composition: element_list . composition_sublist

    ALGORITHM  shift, and go to state 76
    EQUATION   shift, and go to state 77
    EXTERNAL   shift, and go to state 78
    INITIAL    shift, and go to state 79
    PROTECTED  shift, and go to state 80
    PUBLIC     shift, and go to state 81

    $default  reduce using rule 65 (opt_external_clause)

    composition_sublist       go to state 82
    opt_external_clause       go to state 83
    initial_equation_clause   go to state 84
    equation_clause           go to state 85
    algorithm_clause          go to state 86
    initial_algorithm_clause  go to state 87


state 53

   75 element_list: element . SEMICOLON element_list

    SEMICOLON  shift, and go to state 88


state 54

   79 element: extends_clause .

    $default  reduce using rule 79 (element)


state 55

   76 element_list: annotation . SEMICOLON element_list

    SEMICOLON  shift, and go to state 89


state 56

   31 enumeration: ENUMERATION LPAREN . enum_list RPAREN comment

    IDENT  shift, and go to state 31

    ident                go to state 90
    enum_list            go to state 91
    enumeration_literal  go to state 92


state 57

   35 overloading: OVERLOAD LPAREN . name_path_list RPAREN comment

    IDENT  shift, and go to state 5

    name_path_list  go to state 93
    name_path       go to state 94


state 58

   28 class_specifier: EQ base_prefix name_path . opt_array_subscripts class_modification comment

    LBRACK  shift, and go to state 95

    $default  reduce using rule 94 (opt_array_subscripts)

    array_subscripts      go to state 96
    opt_array_subscripts  go to state 97


state 59

   42 variability_prefix: CONSTANT .

    $default  reduce using rule 42 (variability_prefix)


state 60

   40 variability_prefix: DISCRETE .

    $default  reduce using rule 40 (variability_prefix)


state 61

   41 variability_prefix: PARAMETER .

    $default  reduce using rule 41 (variability_prefix)


state 62

   26 base_prefix: flow_prefix variability_prefix . direction_prefix

    INPUT   shift, and go to state 98
    OUTPUT  shift, and go to state 99

    $default  reduce using rule 46 (direction_prefix)

    direction_prefix  go to state 100


state 63

  233 string_comment_add: ADD_INT string_comment .

    $default  reduce using rule 233 (string_comment_add)


state 64

  106 class_modification: LPAREN . argument_list RPAREN
  107                   | LPAREN . RPAREN

    RPAREN     shift, and go to state 101
    EACH       shift, and go to state 102
    REDECLARE  shift, and go to state 103

    $default  reduce using rule 12 (optEACH)

    optEACH        go to state 104
    argument_list  go to state 105
    argument       go to state 106


state 65

  234 annotation: ANNOTATION class_modification .

    $default  reduce using rule 234 (annotation)


state 66

  123 extends_clause: EXTENDS name_path . class_modification

    LPAREN  shift, and go to state 64

    class_modification  go to state 107


state 67

    2 ident: IDENT .
  217 name_path: IDENT . DOT name_path
  218          | IDENT .

    DOT  shift, and go to state 11

    EQ        reduce using rule 2 (ident)
    $default  reduce using rule 218 (name_path)


state 68

   51 explicit_import_name: ident . EQ name_path

    EQ  shift, and go to state 108


state 69

   49 import_clause: IMPORT explicit_import_name . comment

    SCON  shift, and go to state 34

    $default  reduce using rule 230 (comment)

    comment         go to state 109
    string_comment  go to state 110


state 70

   50 import_clause: IMPORT implicit_import_name . comment

    SCON  shift, and go to state 34

    $default  reduce using rule 230 (comment)

    comment         go to state 111
    string_comment  go to state 110


state 71

   52 implicit_import_name: name_path . DOTSTAR
   53                     | name_path .

    DOTSTAR  shift, and go to state 112

    $default  reduce using rule 53 (implicit_import_name)


state 72

   84 inner_outer: INNER .
   86            | INNER . OUTER

    OUTER  shift, and go to state 113

    $default  reduce using rule 84 (inner_outer)


state 73

   85 inner_outer: OUTER .

    $default  reduce using rule 85 (inner_outer)


state 74

   80 element: optFINAL inner_outer . REPLACEABLE class_definition opt_constraining_clause comment
   81        | optFINAL inner_outer . class_definition
   82        | optFINAL inner_outer . REPLACEABLE component_clause opt_constraining_clause comment
   83        | optFINAL inner_outer . component_clause
